# engram_backend

./: .gitignore  Dockerfile  README.md  config_template.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
app/: __init__.py  main.py
app/listeners/: db_listeners.py  listeners_manager.py
app/migrations/: 20260704161000_enrich_memory_access_audit_auth_context.sql  20260713180500_add_oauth_facade_tables.sql
app/models/: __init__.py  audit.py  base.py  identity.py  memory.py  oauth.py  repository.py  review.py
app/routers/: __init__.py  admin.py  audit.py  auth.py  dependencies.py  mcp_router.py  memories.py  memory_proposals.py  oauth.py  personal_access_tokens.py  plugin.py  scopes.py  tags.py
app/schemas/: admin.py  audit.py  auth.py  base.py  context.py  enums.py  mcp.py  memory.py  plugin.py  repository.py  review.py  scope.py  tag.py
app/services/: __init__.py  actor_context.py  admin_service.py  audit_query_service.py  audit_service.py  auth_context_service.py  config_service.py  dashboard_memory_service.py  google_oauth_service.py  mcp_context_service.py  memory_retrieval_service.py  memory_service.py  oauth_client_service.py  (+13 more)
db/: schema.sql
deployment/: run_service.sh  uvicorn_conf.py
docs/: animus.md  auth-operator-runbook.md  claude-desktop-mcp-oauth-mvp-plan.md  embedding-retrieval-design.md  engram-implementation-checklist.md  mcp-phase-1-auth.md  memory-bank-implementation-plan.md  repository-scope-resolution.md  vortex.md
tests/: conftest.py  test_auth_phase4.py
(+31 files in other folders)
