[project]
name = "engram-backend"
version = "0.1.0"
description = "Backend service for agent memory/context POC, built with Vortex (FastAPI wrapper)."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  "vortex @ git+ssh://git@bitbucket.org/tata1mg/vortex.git@3.2.0",
  "cache-wrapper @ git+ssh://git@bitbucket.org/tata1mg/cache_wrapper.git@5.3.2",
  "animus @ git+ssh://git@bitbucket.org/tata1mg/animus.git@0.1.2",
  "uvicorn>=0.35.0",
  "uvloop>=0.19.0",
  "httptools>=0.6.0",
  "httpx>=0.28.0",
  "tortoise-orm>=0.21.0,<1.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "redis>=7.0.0,<10.0.0",
  "xxhash>=3.5.0",
  "psutil>=7.2.2",
  "sqlalchemy>=2.0.51",
  "fastmcp>=3.4.2",
  "qdrant-client>=1.18.0",
  "google-auth[requests]>=2.55.1",
]
[tool.pyrefly]
search-path = ["."]
disable-search-path-heuristics = true
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff==0.15.20",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
